# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: __init__.py  cli.py  data_handler.py  path_handler.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
