[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Veronika B <bapplesova@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"